[package]
name = "bevy_wasm"
version = "0.1.0"
authors = ["cviot <viot.camille@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.8.0"
wasm-bindgen = "0.2.68"
bevy_webgl2 = {version="0.4.0"}

[dependencies.bevy]
version = "0.4.0"
default-features = false
features = [
  "bevy_gltf",
  "bevy_winit",
  "render",
  "png",
]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
